# stonks-recommender

./: README.md  main.py  pyproject.toml
data/: stocks.txt
data/strategies/: aggressive.txt  balanced.txt  conservative.txt
prompts/: recommendation.txt  sentiment_analysis.txt
repository/asset_data/AMZN/: 2024-09-28_19-21-51.json
repository/asset_data/INTC/: 2024-09-28_19-55-34.json
repository/asset_data/MSFT/: 2024-09-28_19-15-12.json  2024-09-28_19-16-43.json  2024-09-28_19-17-24.json  2024-09-28_19-35-20.json
repository/asset_data/TSLA/: 2024-09-28_18-43-47.json  2024-09-28_18-54-02.json  2024-09-28_18-56-02.json  2024-09-28_18-57-49.json  2024-09-28_18-59-34.json  2024-09-28_19-00-01.json  2024-09-28_19-01-07.json  2024-09-28_19-12-25.json  2024-09-28_19-47-10.json  2024-09-28_20-22-16.json  2024-10-03_10-50-50.json
repository/sentiment/: AMZN.json  INTC.json  MSFT.json  TSLA.json
src/: config.py
src/application/: recommendation_engine.py  sentiment_analyzer.py
src/core/: logger.py
src/data/: entities.py  value_objects.py
src/data/repository/: asset_data.py  sentiment.py  trading_strategy.py
src/infrastructure/: openai_client.py  prompt_loader.py
src/view/: printers.py  user_interface.py
tests/: test_model_json_parsing.py
